--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "webpack-glsl-loader": "^1.0.1"
   },
   "dependencies": {
+    "@types/dat.gui": "^0.7.13",
     "3d-view-controls": "^2.2.2",
+    "dat.gui": "^0.7.9",
     "gl-matrix": "^3.3.0"
   }
 }
