--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "scripts": {
     "start": "webpack-dev-server --no-hot --live-reload",
-    "build": "webpack"
+    "build": "webpack",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@types/webgl2": "0.0.6",
+    "gh-pages": "^3.2.3",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.2",
     "webpack": "^5.52.0",
